--- a/To-Do List/Base.lproj/Main.storyboard
+++ b/To-Do List/Base.lproj/Main.storyboard
@@ -48,6 +48,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="VCH-7q-Xi7" id="31b-fJ-tCO"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4DN-Rc-XXb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -96,8 +99,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="guI-53-CvK" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5gd-p7-72y">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="5gd-p7-72y">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="1" green="0.1676933515" blue="0.88158647540000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" red="0.34427742779999998" green="1" blue="0.67277675640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
